--- a/prak-10.html
+++ b/prak-10.html
@@ -429,20 +429,26 @@ kundenprofile %&gt;%
 <ol start="3" style="list-style-type: decimal">
 <li>Strick das Dokument und dann: git add, commit, push alle Veränderung zurück auf GitHub</li>
 </ol>
-<!-- ## Übung 4 - Neue Variable erstellen -->
-<!-- 1. Starte mit dem Objekt `einkauefe_preise` und nutze die Funktion `mutate()` um eine neue Variable mit dem Namen 'kosten' zu erstellen. Das Variable soll eine Multiplikation der Spalte 'einkauf' mit der Spalte 'preis' beinhalten. Speicher das Ergebnis als ein neues Objekt in deiner Arbeitsumgebung (Environment) mit dem Namen `einkaeufe_kosten`. -->
-<!-- ```{r} -->
-<!-- ``` -->
-<!-- ## Übung 5 - Daten zusammenfassen (Bonus) -->
-<!-- 1. Starte mit dem Objekt `einkaeufe_kosten` und gruppiere die Daten nach 'kunden_id'. Berechne dann die Summe aus den Kosten um den geschuldeten Betrag der Kund_innen zu berechnen. Speicher das Ergebnis in deiner Arbeitsumgebung mit dem Namen `einkaeufe_kosten_sum`. Ich habe Code mit Lücken für dich vorbereitet. -->
-<!-- 2. Setze die Code-chunk Option von 'eval=FALSE' auf 'eval=TRUE' um den Code beim nächsten Stricken mit auszuführen. -->
-<!-- ```{r, eval=FALSE} -->
-<!-- einkaeufe_kosten_sum <- einkaeufe_kosten %>% -->
-<!--   group_by(___) %>% -->
-<!--   ___( -->
-<!--     summe = ___ -->
-<!--   ) -->
-<!-- ``` -->
+</div>
+<div id="übung-4---neue-variable-erstellen" class="section level2">
+<h2>Übung 4 - Neue Variable erstellen</h2>
+<ol style="list-style-type: decimal">
+<li>Starte mit dem Objekt <code>einkauefe_preise</code> und nutze die Funktion <code>mutate()</code> um eine neue Variable mit dem Namen ‘kosten’ zu erstellen. Das Variable soll eine Multiplikation der Spalte ‘einkauf’ mit der Spalte ‘preis’ beinhalten. Speicher das Ergebnis als ein neues Objekt in deiner Arbeitsumgebung (Environment) mit dem Namen <code>einkaeufe_kosten</code>.</li>
+</ol>
+<pre class="r"><code>einkaeufe_kosten &lt;- einkaeufe_preise %&gt;% 
+  mutate(kosten = einkauf * preis)</code></pre>
+</div>
+<div id="übung-5---daten-zusammenfassen-bonus" class="section level2">
+<h2>Übung 5 - Daten zusammenfassen (Bonus)</h2>
+<ol style="list-style-type: decimal">
+<li>Starte mit dem Objekt <code>einkaeufe_kosten</code> und gruppiere die Daten nach ‘kunden_id’. Berechne dann die Summe aus den Kosten um den geschuldeten Betrag der Kund_innen zu berechnen. Speicher das Ergebnis in deiner Arbeitsumgebung mit dem Namen <code>einkaeufe_kosten_sum</code>. Ich habe Code mit Lücken für dich vorbereitet.</li>
+<li>Setze die Code-chunk Option von ‘eval=FALSE’ auf ‘eval=TRUE’ um den Code beim nächsten Stricken mit auszuführen.</li>
+</ol>
+<pre class="r"><code>einkaeufe_kosten_sum &lt;- einkaeufe_kosten %&gt;%
+  group_by(kunden_id) %&gt;%
+  summarise(
+    summe = sum(kosten)
+  )</code></pre>
 <!-- 2. Starte mit dem Objekt `einkaeufe_kosten_sum` und nutze die Funktion `left_join()` um dieses mit dem Objekt `kundenprofile` zusammenzufügen. Selektiere dann nur die Spalten 'vorname', 'nachname', 'summe' und 'email'. Speicher das Ergebnis als ein neues Objekt in deiner Arbeitsumgebung (Environment) mit dem Namen `kunden_tab`. -->
 <!-- ```{r} -->
 <!-- kunden_tab <- einkaeufe_kosten_sum %>% -->
